--- a/public/index.html
+++ b/public/index.html
@@ -4,10 +4,12 @@
     <meta charset="utf-8" />
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <meta property="og:image" content="../src/imgs/logo.png" />
+
     <!-- <meta name="theme-color" content="#000000" /> -->
     <meta
       name="description"
-      content="Web site created using create-react-app"
+      content="We are Hafizon Academy, an online Quran teaching academy that provides Quran courses online, memorization techniques, and tajweed rules. Our mission is to help Muslims all over the world learn and understand the Quran.p"
     />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <!--
@@ -24,7 +26,7 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>React App</title>
+    <title>Hafizon Academy</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
